# lightNVR

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  package-lock.json  rtsp_test.c
.github/: cla-signatures.json
.github/workflows/: cla.yml  debian-package.yml  integration-test.yml  sanitizer.yml
db/migrations/: 0038_add_privacy_mode.sql  0039_add_motion_trigger_source.sql
docs/: API.md  ARCHITECTURE.md  MOTION_BUFFER.md  ONVIF_DETECTION.md
examples/: onvif_motion_recording_example.c
include/core/: config.h  daemon.h  path_utils.h  url_utils.h
include/database/: db_embedded_migrations.h  db_motion_config.h  db_recordings.h  db_streams.h
include/storage/: storage_manager.h
include/telemetry/: player_telemetry.h  stream_metrics.h
include/utils/: memory.h  strings.h
include/video/: detection.h  detection_integration.h  ffmpeg_utils.h  mp4_writer.h  mp4_writer_core.c  mp4_writer_thread.h  onvif_motion_recording.h  onvif_soap.h  packet_buffer.h  pre_detection_buffer.h  unified_detection_thread.c  unified_detection_thread.h
include/video/hls/: hls_directory.h
include/web/: api_handlers_metrics.h  api_handlers_motion.h  api_handlers_timeline.h  http_server.h  libuv_server.h  request_response.h  web_server.h
src/core/: config.c  daemon.c  logger.c  logger_json.c  main.c  mqtt_client.c  path_utils.c  shutdown_coordinator.c  url_utils.c
src/database/: db_auth.c  db_core.c  db_detections.c  db_events.c  db_migrations.c  db_motion_config.c  db_query_builder.c  db_recording_tags.c  db_recordings.c  db_recordings_sync.c  db_schema_cache.c  db_streams.c  db_system_settings.c  db_zones.c  sqlite_migrate.c
src/storage/: storage_manager.c  storage_manager_streams.c
src/telemetry/: player_telemetry.c  stream_metrics.c
src/tools/: rebuild_recordings.c
src/utils/: memory.c  strings.c
src/video/: api_detection.c  buffer_strategy_go2rtc.c  buffer_strategy_hls_segment.c  buffer_strategy_memory_packet.c  buffer_strategy_mmap.c  detection.c  detection_integration.c  detection_model.c  detection_stream.c  ffmpeg_utils.c  hls_streaming.c  hls_writer.c  motion_detection.c  motion_storage_manager.c  mp4_recording_core.c  mp4_recording_writer.c  mp4_segment_recorder.c  mp4_writer_core.c  mp4_writer_thread.c  mp4_writer_utils.c  onvif_detection.c  onvif_device_management.c  onvif_discovery.c  onvif_discovery_network.c  onvif_discovery_response.c  onvif_motion_recording.c  onvif_ptz.c  onvif_soap.c  packet_buffer.c  recording.c  sod_detection.c  sod_integration.c  sod_realnet.c  stream_manager.c  stream_protocol.c  stream_state.c  stream_state_adapter.c  timestamp_manager.c  unified_detection_thread.c  zone_filter.c
src/video/go2rtc/: go2rtc_api.c  go2rtc_consumer.c  go2rtc_disabled.c  go2rtc_integration.c  go2rtc_process.c  go2rtc_snapshot.c  go2rtc_stream.c
src/video/hls/: hls_context.c  hls_directory.c  hls_unified_thread.c
src/web/: api_handlers_auth_backend_agnostic.c  api_handlers_detection.c  api_handlers_go2rtc_proxy.c  api_handlers_health.c  api_handlers_metrics.c  api_handlers_motion.c  api_handlers_onvif_backend_agnostic.c  api_handlers_ptz.c  api_handlers_recordings_backend_agnostic.c  api_handlers_recordings_batch_download.c  api_handlers_recordings_files_backend_agnostic.c  api_handlers_recordings_list.c  api_handlers_recordings_thumbnail.c  api_handlers_retention.c  api_handlers_settings.c  api_handlers_streaming.c  api_handlers_streams_get.c  api_handlers_streams_modify.c  api_handlers_streams_test.c  api_handlers_system.c  api_handlers_timeline.c  api_handlers_users_backend_agnostic.c  api_handlers_zones.c  batch_delete_progress.c  go2rtc_proxy_thread.c  httpd_utils.c  libuv_api_handlers.c  libuv_connection.c  libuv_file_serve.c  libuv_server.c  request_response.c  thumbnail_thread.c
tests/: test_sod_unified.c  test_stream_detection.c
tests/load/: scenarios.ts
tests/unit/: CMakeLists.txt  test_api_handlers_system.c  test_config.c  test_cross_stream_motion_trigger.c  test_db_auth.c  test_db_detections.c  test_db_maintenance.c  test_db_motion_config.c  test_db_recordings_extended.c  test_db_recordings_sync.c  test_db_streams.c  test_db_zones.c  test_detection_system_onvif.c  test_go2rtc_process_detection.c  test_httpd_utils.c  test_logger_json.c  test_memory.c  test_mp4_writer_audio.c  test_onvif_soap_fault.c  test_request_response.c  test_storage_manager_retention.c  test_storage_retention_sqlite.c  test_stream_manager.c  test_stream_state.c  test_strings.c  test_url_utils.c  test_zone_filter.c
web/: package-lock.json
web/css/: layout.css
web/js/components/preact/: HLSVideoCell.jsx  Header.jsx  HealthView.jsx  LiveView.jsx  MSEVideoCell.jsx  RecordingsView.jsx  StreamConfigModal.jsx  StreamsView.jsx  WebRTCVideoCell.jsx  WebRTCView.jsx  useCameraOrder.js
web/js/components/preact/health/: Sparkline.jsx
web/js/components/preact/recordings/: RecordingsGrid.jsx  RecordingsTable.jsx
web/js/components/preact/timeline/: TimelinePlayer.jsx
web/js/utils/: player-telemetry.js
web/public/locales/: en.json
