# tests/unit/CMakeLists.txt
# Unity-based unit and integration tests
# Layer 1 (test_storage_pressure)      — pure logic, zero heavy deps
# Layer 2 (test_storage_retention_sqlite) — real SQLite via lightnvr_lib

# ---- Unity static library ----
add_library(unity_lib STATIC
    ${CMAKE_SOURCE_DIR}/third_party/unity/unity.c
)
target_include_directories(unity_lib PUBLIC
    ${CMAKE_SOURCE_DIR}/third_party/unity
)

# ====================================================================
# CMake helper macros — reduce boilerplate for test registration
# ====================================================================
macro(add_layer1_test TEST_NAME)
    add_executable(${TEST_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/${TEST_NAME}.c)
    target_include_directories(${TEST_NAME} PRIVATE ${CMAKE_SOURCE_DIR}/include)
    target_link_libraries(${TEST_NAME} unity_lib)
    set_target_properties(${TEST_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
    add_test(NAME ${TEST_NAME} COMMAND ${TEST_NAME})
endmacro()

macro(add_layer2_test TEST_NAME)
    add_executable(${TEST_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/${TEST_NAME}.c)
    target_include_directories(${TEST_NAME} PRIVATE ${CMAKE_SOURCE_DIR}/include)
    target_link_libraries(${TEST_NAME}
        unity_lib
        lightnvr_lib
        ${SQLITE_LIBRARIES}
        ${SSL_LIBRARIES}
        ${HTTP_BACKEND_LIBS}
        inih_lib
        pthread
        dl
    )
    if(CJSON_BUNDLED)
        target_link_libraries(${TEST_NAME} cjson_lib)
    elseif(CJSON_FOUND)
        target_link_libraries(${TEST_NAME} ${CJSON_LIBRARIES})
    endif()
    if(ENABLE_MQTT AND MOSQUITTO_FOUND)
        target_link_libraries(${TEST_NAME} ${MOSQUITTO_LIBRARIES})
    endif()
    if(ENABLE_SOD)
        target_link_libraries(${TEST_NAME} sod)
    endif()
    set_target_properties(${TEST_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
    add_test(NAME ${TEST_NAME} COMMAND ${TEST_NAME})
endmacro()

# Variant for Layer 2 tests that require CURL
macro(add_layer2_test_with_curl TEST_NAME)
    add_layer2_test(${TEST_NAME})
    target_link_libraries(${TEST_NAME} ${CURL_LIBRARIES})
endmacro()

# Convenience wrappers for Layer 2 tests with common external deps.

macro(add_layer2_test_with_ffmpeg TEST_NAME)
    add_layer2_test(${TEST_NAME})
    target_link_libraries(${TEST_NAME} ${FFMPEG_LIBRARIES})
endmacro()

macro(add_layer3_test TEST_NAME)
    add_executable(${TEST_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/${TEST_NAME}.c)
    target_include_directories(${TEST_NAME} PRIVATE
        ${CMAKE_SOURCE_DIR}/include
        ${FFMPEG_INCLUDE_DIRS}
    )
    target_link_libraries(${TEST_NAME}
        unity_lib
        lightnvr_lib
        ${FFMPEG_LIBRARIES}
        ${SQLITE_LIBRARIES}
        ${CURL_LIBRARIES}
        ${SSL_LIBRARIES}
        ${HTTP_BACKEND_LIBS}
        inih_lib
        pthread
        dl
        m
    )
    if(CJSON_BUNDLED)
        target_link_libraries(${TEST_NAME} cjson_lib)
    elseif(CJSON_FOUND)
        target_link_libraries(${TEST_NAME} ${CJSON_LIBRARIES})
    endif()
    if(ENABLE_MQTT AND MOSQUITTO_FOUND)
        target_link_libraries(${TEST_NAME} ${MOSQUITTO_LIBRARIES})
    endif()
    if(ENABLE_SOD)
        target_link_libraries(${TEST_NAME} sod)
    endif()
    set_target_properties(${TEST_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
    add_test(NAME ${TEST_NAME} COMMAND ${TEST_NAME})
endmacro()

# ====================================================================
# Layer 1: test_storage_pressure
# Pure unit test — only needs unity_lib + project headers.
# disk_pressure_level_str() and evaluate_disk_pressure_level() are
# both static inline in storage_manager.h, so no .c files are linked.
# ====================================================================
add_layer1_test(test_storage_pressure)

# ====================================================================
# Layer 2: test_storage_retention_sqlite
# Integration test — runs real SQL queries via db_core / db_recordings.
# ====================================================================
add_layer2_test(test_storage_retention_sqlite)

# ====================================================================
# Layer 1: Pure logic tests — unity_lib + project headers only
# (Only tests whose functions are static inline in headers)
# ====================================================================
add_layer1_test(test_storage_pressure_extended)
add_layer1_test(test_detection_result_structures)

# ====================================================================
# Layer 2: lightnvr_lib tests — compiled functions + optional SQLite
# ====================================================================
add_layer2_test(test_config)
add_layer2_test(test_logger)
add_layer2_test(test_strings)
add_layer2_test(test_memory)
add_layer2_test(test_request_response)
add_layer2_test(test_shutdown_coordinator)
add_layer2_test(test_detection_config)
add_layer2_test_with_curl(test_detection_model_motion)
add_layer2_test_with_curl(test_detection_system_onvif)
add_layer2_test_with_ffmpeg(test_api_detection)
add_layer2_test_with_curl(test_url_utils)
add_layer2_test(test_db_streams)
add_layer2_test(test_db_recordings_extended)
add_layer2_test(test_storage_manager_retention)
add_layer2_test(test_db_detections)
add_layer2_test(test_db_zones)
add_layer2_test(test_db_events)
add_layer2_test(test_db_auth)
add_layer2_test(test_db_transactions)
add_layer2_test(test_db_maintenance)
add_layer2_test(test_db_query_builder)
add_layer2_test(test_logger_json)
add_layer2_test(test_batch_delete_progress)
add_layer2_test(test_db_recordings_sync)
add_layer2_test(test_httpd_utils)
add_layer2_test(test_zone_filter)
add_layer2_test(test_onvif_soap_fault)
add_layer2_test_with_curl(test_go2rtc_process_detection)
if(ENABLE_GO2RTC)
    add_layer2_test_with_curl(test_go2rtc_process_config_generation)
endif()

# ====================================================================
# Layer 3: Integration tests — lightnvr_lib + FFmpeg
# ====================================================================
add_layer3_test(test_stream_manager)
add_layer3_test(test_stream_state)
add_layer3_test(test_packet_buffer)
add_layer3_test(test_timestamp_manager)
add_layer3_test(test_api_handlers_system)
add_layer1_test(test_external_motion_trigger)    # Layer 1: external_motion_trigger state-machine (PR #356)
add_layer3_test(test_cross_stream_motion_trigger)
# Regression for PR audio-stream-before-header fix.
add_layer3_test(test_mp4_writer_audio)

message(STATUS "Building Unity unit tests (Layer 1 + Layer 2 + Layer 3)")

